last commit of april 4th fixed register and login in navbar collapse

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -27,6 +27,9 @@
 .limit2{
     max-width: 800px;
 }
+.limit3{
+    max-width: 400px;
+}
 
 .font{
     font-family:  'Montserrat';
